# chimera-sdk-multi

./: .clang-format  .devcontainer  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  CMakeLists.txt  README.md  REUSE.toml  build.sh  config.cmake  pyproject.toml
cmake/: Chimera.cmake  ChimeraUtils.cmake  GenerateDeviceSymbols.cmake  toolchain_llvm.cmake
cmake/scripts/: CheckSectionOverlaps.cmake  ChimeraBuildHelpers.cmake  PrintBuildFooter.cmake
common/: common.ldh  shared.h  soc_addr_map.h  soc_regs.h
devices/snitch_cluster/: CMakeLists.txt  crt0.S  link.ld  main.c
devices/snitch_cluster_0/: CMakeLists.txt  crt0.S  link.ld.in  main.c
devices/snitch_cluster_1/: CMakeLists.txt  crt0.S  link.ld.in  main.c
host/: CMakeLists.txt  crt0.S  link.ld  link.ld.in  main.c
scripts/: check_section_overlaps.py  merge_elf.py  reuse_skip_wrapper.py
